[gd_scene load_steps=10 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://rocas.tscn" type="PackedScene" id=2]
[ext_resource path="res://Mundo.gd" type="Script" id=3]
[ext_resource path="res://interfaz.tscn" type="PackedScene" id=4]
[ext_resource path="res://Backgrounds/INICIO.png" type="Texture" id=5]
[ext_resource path="res://Bonus/sfx_lose.ogg" type="AudioStream" id=6]
[ext_resource path="res://Bonus/WAV/BossMain.wav" type="AudioStream" id=7]
[ext_resource path="res://Backgrounds/purpura2.jpg" type="Texture" id=8]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -16.985, -3.56656, 0, 0, 0, 0, 327.761, -8.50315, 0, 0, 0, 0, 793.693, -5.27622, 0, 0, 0, 0, 791.591, 483.83, 0, 0, 0, 0, 796.089, 990.58, 0, 0, 0, 0, -14.6997, 985.934, 0, 0, 0, 0, -15.8615, 511.014, 0, 0, 0, 0, -17.104, 478.331, 0, 0, 0, 0, -16.8121, 478.331, 0, 0, 0, 0, -15.4195, -1.98283, 0, 0, 0, 0, -16.985, -3.56656 )
}

[node name="Mundo" type="Node"]
script = ExtResource( 3 )
rocas = ExtResource( 2 )

[node name="rocaTimer" type="Timer" parent="."]
wait_time = 1.1

[node name="scoreTimer" type="Timer" parent="."]

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 326.357, 560.519 )
scale = Vector2( -1.3, -14.5 )

[node name="camino" type="Path2D" parent="."]
position = Vector2( 13.2564, 4.05271 )
scale = Vector2( 0.992637, 0.967266 )
curve = SubResource( 1 )

[node name="RocaPosicion" type="PathFollow2D" parent="camino"]
position = Vector2( -16.985, -3.56656 )
rotation = -0.0143186

[node name="interfaz" parent="." instance=ExtResource( 4 )]

[node name="audiomuerte" type="AudioStreamPlayer" parent="."]
pause_mode = 1
stream = ExtResource( 6 )
volume_db = 24.0

[node name="musica" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="fondo2" type="TextureRect" parent="."]
margin_right = 800.0
margin_bottom = 1000.0
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fondo" type="TextureRect" parent="."]
anchor_bottom = 0.03
margin_left = -1.0
margin_top = -3.0
margin_right = 800.0
margin_bottom = 930.2
texture = ExtResource( 5 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 326.349, 561.706 )

[node name="inicioTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="timeout" from="rocaTimer" to="." method="_on_rocaTimer_timeout"]
[connection signal="timeout" from="scoreTimer" to="." method="_on_scoreTimer_timeout"]
[connection signal="iniciar_juego" from="interfaz" to="." method="nuevo_juego"]
[connection signal="golpe" from="Player" to="." method="game_over"]
[connection signal="timeout" from="inicioTimer" to="." method="_on_inicioTimer_timeout"]
